--- a/weekly-workshops-randhirdogra1-main/week02/index.html
+++ b/weekly-workshops-randhirdogra1-main/week02/index.html
@@ -2,6 +2,61 @@
 <html>
 <head>
     <body>
-        <h1 style="color:red">Randhir Dogra - Bachelor of Cyber Security</h1>
+        <h1 style="color:red">Randhir Dogra</h1>
+        <p> Currently studying a Bachelor of Cyber Security at Macquarie University</p>
+        <section>
+            <table>
+                <tr>
+                    <th>Unit Code</th>
+                    <th>Unit Name</th>
+                    <th>Year</th>
+                </tr>
+                <tr>
+                    <td>COMP1300</td>
+                    <td>Introduction to Cyber Security</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <td>COMP1150</td>
+                    <td>Introduction to Video Games</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <td>COMP1000</td>
+                    <td>Introduction to Computer Programming</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <td>PICT1000</td>
+                    <td>Introduction to Security Studies</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <td>COMP1010</td>
+                    <td>Introduction to Computer Science</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <td>COMP1350</td>
+                    <td>Introduction to Database Design and Managment</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <td>STAT1170</td>
+                    <td>Introduction to Statistics</td>
+                    <td>2021</td>
+                </tr>
+                <tr>
+                    <td>MATH1007</td>
+                    <td>Introduction to Discrete Mathematics</td>
+                    <td>2021</td>
+                </tr>
+            </table>
+        </section>
+        <section>
+            <figure>
+                
+            </figure>
+        </section>
     </body>
 </head>
