--- a/weekly-workshops-randhirdogra1-main/week02/index.html
+++ b/weekly-workshops-randhirdogra1-main/week02/index.html
@@ -55,7 +55,8 @@
         </section>
         <section>
             <figure>
-                
+                <img src="mq.jpg">
+                <img src="https://www.mq.edu.au/__data/assets/image/0003/712272/image4.jpg"
             </figure>
         </section>
     </body>
