--- a/weekly-workshops-randhirdogra1-main/week02/index.html
+++ b/weekly-workshops-randhirdogra1-main/week02/index.html
@@ -3,7 +3,7 @@
 <head>
     <body>
         <h1 style="color:red">Randhir Dogra</h1>
-        <p> Currently studying a Bachelor of Cyber Security at Macquarie University</p>
+        <p> <i>Currently studying a Bachelor of Cyber Security at Macquarie University</i></p>
         <section>
             <table>
                 <tr>
@@ -56,8 +56,13 @@
         <section>
             <figure>
                 <img src="mq.jpg">
-                <img src="https://www.mq.edu.au/__data/assets/image/0003/712272/image4.jpg"
+                <img src="https://www.mq.edu.au/__data/assets/image/0003/712272/image4.jpg">
             </figure>
+        </section>
+        <section>
+                <video>
+                    <source src=""
+                </video>
         </section>
     </body>
 </head>
