--- a/weekly-workshops-randhirdogra1-main/week02/index.html
+++ b/weekly-workshops-randhirdogra1-main/week02/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="styles.css">
     <body>
         <h1 style="color:red">Randhir Dogra</h1>
         <p> <i>Currently studying a Bachelor of Cyber Security at Macquarie University</i></p>
@@ -65,4 +66,3 @@
                 </video>
         </section>
     </body>
-</head>
