--- a/weekly-workshops-randhirdogra1-main/week02/index.html
+++ b/weekly-workshops-randhirdogra1-main/week02/index.html
@@ -62,7 +62,7 @@
         </section>
         <section>
                 <video>
-                    <source src=""
+                    <source src="https://techslides.com/demos/sample-videos/samll.mp4" type="video/mp4">
                 </video>
         </section>
     </body>
