Used Stylesheet to improve website appearene

--- a/weekly-workshops-randhirdogra1-main/week02/index.html
+++ b/weekly-workshops-randhirdogra1-main/week02/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+</head>
     <body>
         <h1 style="color:red">Randhir Dogra</h1>
         <p> <i>Currently studying a Bachelor of Cyber Security at Macquarie University</i></p>
-        <section>
+        <section id="Classes">
             <table>
                 <tr>
                     <th>Unit Code</th>
@@ -62,7 +63,10 @@
         </section>
         <section>
                 <video>
-                    <source src="https://techslides.com/demos/sample-videos/samll.mp4" type="video/mp4">
+                    <source src="https://techslides.com/demos/sample-videos/samll.mp4">
                 </video>
         </section>
+        <footer>
+            <p>Randhir Dogra &copy;</p>
+        </footer>
     </body>
