--- a/weekly-workshops-randhirdogra1-main/week02/index.html
+++ b/weekly-workshops-randhirdogra1-main/week02/index.html
@@ -67,6 +67,6 @@
                 </video>
         </section>
         <footer>
-            <p>Randhir Dogra &copy;</p>
+            <p>Randhir Dogra 2021 &copy;</p>
         </footer>
     </body>
