Boxed forgot password, sign in

--- a/weekly-workshops-randhirdogra1-main/week04/index1.html
+++ b/weekly-workshops-randhirdogra1-main/week04/index1.html
@@ -8,10 +8,10 @@
     <body>
         <h1>iLearn</h1>
 
-        <p class="username">Username</p>
-        <p class="pword">Password</p>
-        <p class="forgo">Forgot Password</p>
-        <p class="signin">Sign in</p>
+        <div class="username">Username</div>
+        <div class="pword">Password</div>
+        <div class="forgo">Forgot Password</div>
+        <div class="signin">Sign in</div>
 
 
     </body>
