--- a/weekly-workshops-randhirdogra1-main/week04/index1.html
+++ b/weekly-workshops-randhirdogra1-main/week04/index1.html
@@ -7,9 +7,14 @@
 
     <body>
         <h1>iLearn</h1>
-
+        <section>
         <div class="username">Username</div>
-        <div class="pword">Password</div>
+        <input type="text">
+        </section>
+        <section>
+            <div class="pword">Password</div>
+            <input type="text">
+            </section>
         <div class="forgo">Forgot Password</div>
         <div class="signin">Sign in</div>
 
